# aury-ai-model

./: README.md  publish.sh  pyproject.toml
aury/ai/model/: __init__.py  client.py  tools.py  types.py
aury/ai/model/providers/: doubao.py  openai.py  openrouter.py
