[project]
name = "aury-ai-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "json-repair>=0.54.3",
    "openai>=2.12.0",
    "pydantic>=2.12.5",
    "tenacity>=9.1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["aury"]

[project.optional-dependencies]
doubao = [
    "volcengine-python-sdk[ark]>=1.0",
]
all = [
    "volcengine-python-sdk[ark]>=1.0",
]
[dependency-groups]
dev = [
    "dotenv>=0.9.9",
]
